# vk_education_advanced_cpp

./: CMakeLists.txt  CPPLINT.cfg  Makefile  README.md  suppressions.txt
.github/workflows/: ci.yml
project/: CMakeLists.txt
project/include/: Matrix.hpp  avltree.h  set.h
project/src/: Matrix.cpp
project/tests/: CMakeLists.txt
project/tests/data/creation/: in1.txt  in2.txt  in3.txt  in4.txt  in4_transp.txt
project/tests/data/det/: in.txt  out.txt
project/tests/data/elemWiseMul/: in.txt  out.txt
project/tests/data/getters/: in1.txt  in2.txt  in3.txt  in4.txt  out2.txt  out3.txt  out4.txt
project/tests/data/inv/: in.txt  out.txt
project/tests/data/mul/: in1.txt  in2.txt  in3.txt  in4.txt  out1.txt  out2.txt  out3.txt  out4.txt
project/tests/data/sub/: in1.txt  in4.txt  out1.txt  out2.txt  out3.txt  out4.txt
project/tests/data/sum/: in2.txt  in3.txt  in5.txt  in6.txt  out1.txt  out2.txt  out3.txt  out4.txt  out5.txt  out6.txt
project/tests/data/transp/: in.txt  out.txt
project/tests/include/: utils.hpp
project/tests/src/: Getters_test.cpp  Math_tests.cpp  constnesstest.cpp  constructorstest.cpp  copy_correctness_test.cpp  creation_test.cpp  destructor_test.cpp  emptytest.cpp  erasetest.cpp  inserttest.cpp  iterators_test.cpp  main.cpp  sizetest.cpp  utils.cpp
scripts/: lint.sh  valgrind.sh
